--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
     "deploy-local": "graph deploy example --ipfs http://127.0.0.1:5001 --node http://127.0.0.1:8020"
   },
   "devDependencies": {
-    "@graphprotocol/graph-cli": "^0.30.2",
-    "@graphprotocol/graph-ts": "^0.27.0"
+    "@graphprotocol/graph-cli": "^0.67.0",
+    "@graphprotocol/graph-ts": "^0.32.0",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.2",
+    "@types/sinon-chai": "^3.2.12",
+    "ethereum-waffle": "^4.0.10"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "babel-register": "^6.26.0",
-    "truffle": "^5.0.4",
+    "dotenv": "^16.4.5",
+    "hardhat": "^2.21.0",
+    "truffle": "^5.11.5",
     "truffle-contract": "^4.0.5",
     "truffle-hdwallet-provider": "^1.0.4"
   }
